Fix height between name/email field on mobile

--- a/comments/frontend/view/default/stylesheet/css/stylesheet.css
+++ b/comments/frontend/view/default/stylesheet/css/stylesheet.css
@@ -3216,6 +3216,10 @@ select.cmtx_required {
     width: 100%;
   }
 
+  .cmtx_name_spacing {
+    margin-bottom: 20px;
+  }
+
   .cmtx_geo_row [class*=cmtx_col_] {
     float: none;
     width: 100%;
