--- a/comments/frontend/view/default/stylesheet/sass/partial/_form.scss
+++ b/comments/frontend/view/default/stylesheet/sass/partial/_form.scss
@@ -646,6 +646,10 @@ select.cmtx_required {
         width: 100%;
     }
 
+    .cmtx_name_spacing {
+        margin-bottom: 20px;
+    }
+
     .cmtx_geo_row [class*='cmtx_col_'] {
         float: none;
         width: 100%;
